@@ -133,6 +133,9 @@ EC_OP_KAD_STOP                      0x49
 EC_OP_CONNECT                       0x4A
 EC_OP_DISCONNECT                    0x4B
 EC_OP_GET_DLOAD_QUEUE_DETAIL        0x4C
+
+EC_OP_KAD_UPDATE_FROM_URL           0x4D
+EC_OP_KAD_BOOTSTRAP_FROM_IP         0x4E
 [/Section]
 
 [Section Content]
@@ -148,6 +151,8 @@ EC_TAG_DETAIL_LEVEL                       0x0004
 EC_TAG_CONNSTATE                          0x0005
 EC_TAG_ED2K_ID                            0x0006
 EC_TAG_LOG_TO_STATUS                      0x0007
+EC_TAG_BOOTSTRAP_IP                       0x0008
+EC_TAG_BOOTSTRAP_PORT                     0x0008
 
 
 EC_TAG_CLIENT_NAME                        0x0100
@@ -365,6 +370,9 @@ EC_TAG_SELECT_PREFS                       0x1000
 		EC_TAG_CORETW_FILEBUFFER                  0x1D03
 		EC_TAG_CORETW_UL_QUEUE                    0x1D04
 		EC_TAG_CORETW_SRV_KEEPALIVE_TIMEOUT       0x1D05
+
+	EC_TAG_PREFS_KADEMLIA                     0x1E00
+		EC_TAG_KADEMLIA_URL_LIST                  0x1E01
 [/Section]
 
 [Section Content]
