@@ -111,6 +111,8 @@ public final static byte EC_OP_KAD_STOP                      = 0x49;
 public final static byte EC_OP_CONNECT                       = 0x4A;
 public final static byte EC_OP_DISCONNECT                    = 0x4B;
 public final static byte EC_OP_GET_DLOAD_QUEUE_DETAIL        = 0x4C;
+public final static byte EC_OP_KAD_UPDATE_FROM_URL           = 0x4D;
+public final static byte EC_OP_KAD_BOOTSTRAP_FROM_IP         = 0x4E;
 
 public final static short EC_TAG_STRING                             = 0x0000;
 public final static short EC_TAG_PASSWD_HASH                        = 0x0001;
@@ -120,6 +122,8 @@ public final static short EC_TAG_DETAIL_LEVEL                       = 0x0004;
 public final static short EC_TAG_CONNSTATE                          = 0x0005;
 public final static short EC_TAG_ED2K_ID                            = 0x0006;
 public final static short EC_TAG_LOG_TO_STATUS                      = 0x0007;
+public final static short EC_TAG_BOOTSTRAP_IP                       = 0x0008;
+public final static short EC_TAG_BOOTSTRAP_PORT                     = 0x0008;
 public final static short EC_TAG_CLIENT_NAME                        = 0x0100;
 public final static short 	EC_TAG_CLIENT_VERSION                     = 0x0101;
 public final static short 	EC_TAG_CLIENT_MOD                         = 0x0102;
@@ -315,6 +319,8 @@ public final static short 		EC_TAG_CORETW_VERBOSE                     = 0x1D02;
 public final static short 		EC_TAG_CORETW_FILEBUFFER                  = 0x1D03;
 public final static short 		EC_TAG_CORETW_UL_QUEUE                    = 0x1D04;
 public final static short 		EC_TAG_CORETW_SRV_KEEPALIVE_TIMEOUT       = 0x1D05;
+public final static short 	EC_TAG_PREFS_KADEMLIA                     = 0x1E00;
+public final static short 		EC_TAG_KADEMLIA_URL_LIST                  = 0x1E01;
 
 public final static byte EC_DETAIL_CMD           = 0x00;
 public final static byte EC_DETAIL_WEB           = 0x01;
